--- a/src/todo/components/Navbar.css
+++ b/src/todo/components/Navbar.css
@@ -13,6 +13,7 @@
   font-size: 1.5em;
   text-decoration: none;
   color: #e34432;
+  margin-left: 20px;
 }
 .navbar button {
   background-color: #e34432;
