--- a/src/todo/routes/TodoForm.css
+++ b/src/todo/routes/TodoForm.css
@@ -1,59 +1,60 @@
-h1 {
-  padding: 10px;
-  margin-top: 80px;
-  text-align: center;
-  font-size: 1.5em;
-  margin-bottom: 20px;
+/* TodoForm Styles */
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
+    margin-top: 100px;
+    padding: 30px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-form {
-  max-width: 400px;
-  margin: 0 auto;
+.form-container h2 {
+    color: #6d6875;
+    margin-bottom: 20px;
 }
 
-label {
-  display: block;
-  margin-bottom: 10px;
+.form-container form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-input {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+.form-container label {
+    width: 100%;
+    text-align: left;
+    color: #6d6875;
+    margin-bottom: 5px;
 }
 
-.btn {
-  background-color: #e34432;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.form-container input[type="text"],
+.form-container input[type="checkbox"],
+.form-container input[type="datetime-local"] {
+    width: calc(100% - 16px);
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
-.btn:hover {
-  background-color: #ff6252;
+.form-container input[type="submit"] {
+    width: 60%;
+    padding: 10px;
+    background-color: #f67280;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 10px;
 }
 
-.button {
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-right: 10px;
-}
-
-.save {
-  background-color: #4caf50;
-  color: white;
-}
-
-.cancel {
-  background-color: #f44336;
-  color: white;
+.form-container input[type="submit"]:hover {
+    background-color: #ff7b8a;
 }
