--- a/src/todo/routes/Login.css
+++ b/src/todo/routes/Login.css
@@ -1,104 +1,81 @@
-/* Global Styles */
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+*{
+    font-family: "Be Vietnam Pro", sans-serif;
+  }
 
-/* Login Container Styles */
+
 .login-container {
-    max-width: 400px;
-    margin: 0 auto;
-    margin-top: 100px;
-    padding: 30px;
-    border: 1px solid #ddd;
+    max-width: 500px;
+    margin: 5rem auto;
+    padding: 40px;
+    background-color: #f9f9f9;
     border-radius: 10px;
-    background-color: #fff;
-    text-align: center; /* Centraliza o texto dentro do container */
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centraliza os itens horizontalmente */
-    justify-content: center; /* Centraliza os itens verticalmente */
 }
 
 .login-container h2 {
-    color: #6d6875;
-    margin-bottom: 20px; /* Espaçamento inferior para o título */
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: #333;
 }
 
 .login-container form {
-    width: 100%; /* Garante que o formulário ocupe toda a largura do container */
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centraliza os itens horizontalmente dentro do formulário */
+    margin-bottom: 20px;
 }
 
-.login-container .fieldset {
-    width: 100%; 
-    margin-bottom: 10px;
+.fieldset {
+    margin-bottom: 20px;
 }
 
-/* Label Styles */
-.login-container label {
-    width: 100%; /* Garante que o label ocupe toda a largura do fieldset */
-    text-align: left; /* Alinha o texto do label à esquerda */
-    color: #6d6875;
-    margin-bottom: 5px;
+.fieldset label {
+    font-size: 18px;
+    color: #333;
 }
 
-/* Input Styles */
-.login-container input {
-    width: calc(100% - 16px); /* Garante que o input ocupe toda a largura do fieldset */
-    padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-/* Submit Button Styles */
+.fieldset input,
 .login-container button[type="submit"] {
-    width: 60%;
+    width: calc(100% - 22px); /* Calcula a largura considerando o padding */
     padding: 10px;
-    background-color: #f67280;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    box-sizing: border-box; 
+}
+
+.fieldset input:focus {
+    outline: none;
+    border-color: #007bff;
+}
+
+.login-container button[type="submit"] {
+    background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-bottom: 10px; /* Espaçamento inferior para o botão */
 }
 
 .login-container button[type="submit"]:hover {
-    background-color: #ff7b8a;
+    background-color: #0056b3;
 }
 
-/* Message Styles */
-.login-container .error {
-    color: #f00;
-    margin-bottom: 10px; /* Espaçamento inferior para a mensagem */
+.registro-button {
+    background: none;
+    border: none;
+    color: #007bff;
+    cursor: pointer;
+    font-size: 16px;
+    text-decoration: underline;
+}
+
+.registro-button:hover {
+    color: #0056b3;
 }
 
 .login-container .success {
     color: #008000;
-    margin-bottom: 10px; /* Espaçamento inferior para a mensagem */
 }
 
-/* Register Button Styles */
-.registro-button {
-    color: #f67280;
-    border: none;
-    background-color: #fff;
-    font-weight: bold;
-    font-size: 17px;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-
-.registro-button:hover {
-    color: #ff7b8a;
-}
-
-/* Paragraph Styles for Toggle Link */
-.login-container p {
-    margin-top: 20px; /* Espaçamento superior para o parágrafo */
+.login-container .error {
+    color: #ff0000;
 }
